force-app/main/default/objects/MessagingSession/fields/Sub_Topic__c.field-meta.xml
<CustomField>
    <fullName>Sub_Topic__c</fullName>
    <label>Sub-Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>