force-app/main/default/objects/MessagingSession/fields/X2nd_Sub_Topic__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Sub_Topic__c</fullName>
    <label>2nd Sub-Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>