force-app/main/default/objects/MessagingSession/fields/X3rd_Sub_Topic__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Sub_Topic__c</fullName>
    <label>3rd Sub-Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>