force-app/main/default/objects/MessagingSession/listViews/Chat_Support_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Chat_Support_MessagingSession</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>PlatformType</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>2,3,0</value>
    </filters>
    <label>Open Chats</label>
</ListView>