force-app/main/default/objects/MessagingSession/listViews/General_Support_MessagingSession.listView-meta.xml
<ListView>
    <fullName>General_Support_MessagingSession</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>PlatformType</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>0,2,3</value>
    </filters>
    <label>General Support</label>
    <queue>General_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>